assets/css/styles.css
.no-user-select {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  max-width: 1200px;
  margin: 0 auto;
  background: white;
}
.container header {
  border: 1px solid black;
  width: 100%;
  padding: 25px;
}

/* Meet the Team Styles */

.meet-the-team {
  margin-top: 20px;
  text-align: center;
}

.meet-the-team h2 {
  font-size: 3em;
}

.team-row {
  display: flex;
  justify-content: center;
  padding: 3.5em 1.5em;
  flex-wrap: wrap;
}

.team-member {
  font-size: 1.25em;
  display: grid;
  place-items: center;
  gap: 0.5rem;
  padding: 2rem;
  max-width: 250px;
}

.team-member p {
  font-size: 0.85em;
  color: rgb(116, 115, 115);
}

.team-member img {
  border-radius: 50%;
  box-shadow: 0 0 30px 15px white;
}

.team-member img:hover {
  box-shadow: 0 0 30px 15px green;
}

.contact-container {
  height: 200vh;
}

.contact-banner-container {
  background-color: #eef9fc;
  height: 25%;
  display: flex;
}

.banner-section {
  margin: auto;
  width: 55%;
}

.banner-section h2 {
  font-size: 3em;
  margin-bottom: 1rem;
}

.banner-sub-text {
  color: rgb(116, 115, 115);
  font-size: 1.3rem;
  display: flex;
  max-width: 65%;
  line-height: 2rem;
}

.contact-section-container {
  width: 55%;
  margin: auto;
  display: flex;
}

.subsection-1 {
  display: flex;
  flex-direction: column;
  width: 45%;
}

.subsection-2 {
  display: flex;
  flex-direction: column;
  width: 45%;
}

.name-input-container {
  display: flex;
  flex-direction: row;
}

.first-name {
  width: 40%;
  height: 2rem;
  margin-right: 1.5rem;
}

.last-name {
  width: 40%;
}

.company-name {
  width: 100%;
}

.email {
  width: 100%;
}

.container footer {
  margin-top: auto;
  border: 1px solid black;
  width: 100%;
  padding: 25px;
}

.container p {
  color: aliceblue;
  font-family: 'Roboto', sans-serif;
  font-size: 25px;
}

.coming-soon {
  display: none;
}
.coming-soon img {
  height: 300px;
}

/* General Styles */

ul {
  display: flex;
  width: 100vw;
  background: transparent;
}

.container {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.container img {
  height: 300px;
}

.container p {
  color: aliceblue;
  font-family: 'Roboto', sans-serif;
  font-size: 25px;
}

.hero {
  display: flex;
  padding: 2em;
  align-items: center;
  justify-content: center;
}
.hero_image {
  animation: fadeIn 1.2s ease;
}
.hero_content {
  color: #474343;
  text-align: left;
  margin-left: 9rem;
  max-width: 33rem;
  animation: fadeIn 0.8s ease;
}

.hero_content > h2 {
  font-weight: 700;
  font-size: 3rem;
  text-transform: uppercase;
  line-height: 56px;
  margin-bottom: 20px;
}

.hero_content > p {
  color: rgb(124, 119, 119);
  font-size: 1.5em;
  word-spacing: 0.2em;
  line-height: 1.4;
  font-weight: 400;
  margin-bottom: 30px;
}

.CTA {
  font-family: 'Roboto', sans-serif;
  background-color: #fe6655;
  padding: 0.7em;
  color: white;
  border-radius: 4px;
  word-spacing: 0.2rem;
  outline: none;
  border: none;
  font-weight: 300;
  font-size: 1.2rem;
  width: 200px;
  transition: all 200ms ease-in-out;
}

.CTA:hover {
  background-color: white;
  color: #fe6655;
  border-radius: 4px;
  border: #fe6655 solid 2px;
}

/* Animations for the hero section  */
@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateX(-50px);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@media only screen and (max-width: 768px) {
  .hero {
    flex-direction: column;
    padding: 2rem;
    overflow-x: hidden;
  }

  .hero_content {
    padding: 5px;
    max-width: 25rem;
    margin-left: 0;
  }

  .hero_content > h2 {
    font-weight: 700;
    font-size: 2.2rem;
    text-transform: uppercase;
  }

  .hero_content > p {
    color: rgb(90, 90, 90);
    font-size: 1.1em;
    line-height: 1.3;
    font-weight: 500;
  }

  .hero_image {
    height: 300px;
    object-fit: contain;
    width: 330px;
  }
}

@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

html,
body {
  /*display: grid;*/
  height: 100%;
  width: 100%;
  /*place-items: center;*/
}

.wrapper .button {
  display: inline-block;
  height: 60px;
  width: 60px;
  float: left;
  margin: 0 5px;
  overflow: hidden;
  background: #fff;
  border-radius: 50px;
  cursor: pointer;
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease-out;
}

.wrapper .button:hover {
  width: 200px;
}

.wrapper .button .icon {
  display: inline-block;
  height: 60px;
  width: 60px;
  text-align: center;
  border-radius: 50px;
  box-sizing: border-box;
  line-height: 60px;
  transition: all 0.3s ease-out;
}

.wrapper {
  background: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
}

.wrapper .button:nth-child(1):hover .icon {
  background: #4267b2;
}

.wrapper .button:nth-child(2):hover .icon {
  background: #1da1f2;
}

.wrapper .button:nth-child(3):hover .icon {
  background: #e1306c;
}

.wrapper .button:nth-child(4):hover .icon {
  background: #ff0000;
}

.wrapper .button .icon i {
  font-size: 25px;
  line-height: 60px;
  transition: all 0.3s ease-out;
}

.wrapper .button:hover .icon i {
  color: #fff;
}

.wrapper .button span {
  font-size: 20px;
  font-weight: 500;
  line-height: 60px;
  margin-left: 10px;
  transition: all 0.3s ease-out;
}

.wrapper .button:nth-child(1) span {
  color: #4267b2;
}

.wrapper .button:nth-child(2) span {
  color: #1da1f2;
}

.wrapper .button:nth-child(3) span {
  color: #e1306c;
}

.wrapper .button:nth-child(4) span {
  color: #ff0000;
}

h2 {
  color: green;
}

